tests/compile-errors/providers/type-mismatch.d
provider mismatch {
	probe bad(uint8_t);
};
